@@ -1,1 +1,3 @@
-See the root [README](../../gopherbot/blob/master/README.md)
+**NOTE:** The documentation in the wiki may be out of sync with the most recent download release, and with functionality in the current code. The README.md and contents of doc/ may be incomplete, but should correspond to functionality.
+
+See the root [README](../../gopherbot/blob/master/README.md), which links to the contents of doc/
